# CryptoTicketing_Backend

./: .env  .gitignore  Cargo.toml  Rocket.toml  compose.yml  diesel.toml
migrations/2024-11-22-172517_create_users/: down.sql  up.sql
migrations/2024-11-25-110310_create_events/: up.sql
migrations/2024-11-27-144621_event_likes/: up.sql
src/: lib.rs  main.rs  schema.rs  uploadFile.rs
src/database/: events.rs  likes.rs  mod.rs  users.rs
src/models/: events.rs  likes.rs  mod.rs  time.rs  user.rs
src/routes/: events.rs  likes.rs  mod.rs  users.rs
